Deployment of the Alert Module and the addition, replacement and deletion of custom rules.
